--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.77.8",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
