--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.31",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
@@ -18,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "typescript": "^5",
