--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
 	},
 	"dependencies": {
 		"@gsap/react": "^2.1.2",
+		"@thinkflagship/horizon-web-shorts": "^1.0.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.0.6",
 		"gsap": "^3.12.7",
 		"lenis": "^1.1.20",
-		"next": "15.1.6",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"next": "^16.0.1",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
 		"sass": "^1.77.8",
 		"tailwind-merge": "^2.6.0"
 	},
 	"devDependencies": {
 		"typescript": "^5",
 		"@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"eslint": "^8",
